--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,8 @@ events {
 
 http {
     upstream api_backend {
-        server vehicle-api1:8080;  # Assuming api1 is the hostname of the first API container
-        server vehicle-api2:8080;  # Assuming api2 is the hostname of the second API container
+        server vehicle-api1:8080;
+        server vehicle-api2:8080;
     }
 
     server {
